# agentd

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml
crates/agentctl/: Cargo.toml
crates/agentctl/src/: agent.rs  cli.rs  cutover.rs  enterprise.rs  flow.rs  main.rs  parity.rs  run.rs  runtime.rs
crates/agentctl/tests/: ad_e1_completion_contract.rs  ad_e2_completion_contract.rs  ad_e3_completion_contract.rs  agent_cli.rs  control_plane_dispatch_api_contract.rs  control_plane_execution_evidence_api_contract.rs  cutover_cli.rs  enterprise_artifact_audit_contract.rs  enterprise_cli.rs  enterprise_identity_contract.rs  enterprise_ownership_contract.rs  enterprise_project_authority_contract.rs  enterprise_store_contract.rs  execution_security_contract.rs  flow.rs  parity_cli.rs  project_authority_api_contract.rs  run_cli.rs  version.rs  workflows.rs  worktree_reconciliation_contract.rs
crates/agentd-bin/: Cargo.toml
crates/agentd-bin/examples/: wire_real_store.rs
crates/agentd-bin/src/: agent_mcp_context.rs  cli.rs  clock.rs  command_runner.rs  daemon.rs  enterprise.rs  fleet.rs  fleet_http.rs  fleet_worker.rs  host.rs  lib.rs  main.rs  matrix_bridge.rs  matrix_gateway.rs  mempal.rs  native_backend.rs  native_runtime_client.rs  native_worker.rs  openfab.rs  openfab_http.rs  runtime.rs  security.rs  stdio_mcp.rs  worker_fleet_client.rs  worker_main.rs
crates/agentd-bin/tests/: agent_mcp_context.rs  contract.rs  daemon_http.rs  deployment_checklist.rs  enterprise_coordination.rs  enterprise_fleet.rs  execution_security.rs  matrix_bridge_once.rs  matrix_client_bridge_preflight.rs  matrix_client_bridge_service.rs  matrix_gateway.rs  matrix_preflight_smoke.rs  matrix_service_smoke.rs  mcp_stdio.rs  native_composition.rs  native_runtime_client.rs  native_runtime_http.rs  native_worker.rs  open_pr.rs  openfab.rs  pr_history_bridge.rs  pr_history_status.rs  publish_worktree.rs  real_claude_smoke.rs  real_env_preflight.rs  real_execute_smoke.rs  real_execute_smoke_ad_e0_p153_20260715_r3.rs  real_execute_smoke_artifact.rs  real_execute_task_delta.rs  real_sigkill_smoke.rs  recovery.rs  recovery_http.rs  worker_fleet_http.rs  worker_main.rs
crates/agentd-core/: Cargo.toml
crates/agentd-core/examples/: adversarial_probe.rs  minimal_engine_run.rs
crates/agentd-core/src/: error.rs  lib.rs
crates/agentd-core/tests/: capability_admission.rs  checkpoint.rs  ci_clippy.rs  dot_parser.rs  engine_execute.rs  enterprise_artifact_identity.rs  enterprise_identity.rs  execution_evidence.rs  fleet_scheduler.rs  goal_gate.rs  handlers.rs  handlers_park.rs  matrix_gateway.rs  native_execution_spec.rs  node_graph.rs  outcome_edge.rs  p2_docs.rs  ports_fakes.rs  principal_security.rs  project_authority.rs  scaffold.rs  secret_material.rs  security.rs  spec_guard.rs  task_lease.rs  worktree_threading.rs
crates/agentd-matrix/: Cargo.toml
crates/agentd-matrix/src/: lib.rs
crates/agentd-matrix/tests/: bot_commands.rs  bridge_runtime.rs  client_bridge_once.rs  client_transport.rs  file_transport.rs  http_backend.rs  puppet_accounts.rs  puppet_http_account.rs  puppet_http_account_provisioner.rs  puppet_token_file_store.rs  sdk_adapter.rs
crates/agentd-mempal/: Cargo.toml
crates/agentd-mempal/src/: client.rs  consistency.rs  drainer.rs  error.rs  lib.rs  test_support.rs  transport.rs
crates/agentd-mempal/tests/: client.rs  consistency.rs  drainer.rs
crates/agentd-project-authority/: Cargo.toml
crates/agentd-project-authority/src/: control_plane.rs  http.rs  lib.rs  local.rs  specify.rs
crates/agentd-project-authority/tests/: control_plane_authority.rs  http_specify_authority.rs  local_project_authority.rs  specify_project_authority.rs
crates/agentd-runtime/: Cargo.toml
crates/agentd-runtime/src/: archive.rs  lib.rs  provider.rs  pty.rs
crates/agentd-runtime/tests/: native_runtime.rs  provider_archive.rs  real_codex_native_runtime.rs
crates/agentd-security/: Cargo.toml
crates/agentd-security/src/: evidence_signing.rs  identity.rs  lib.rs  matrix_principal.rs  oidc.rs  placement.rs  redaction.rs  remote_secrets.rs  revocation.rs  sandbox.rs  secrets.rs
crates/agentd-security/tests/: evidence_signing.rs  matrix_principal.rs  oidc.rs  placement.rs  real_oci_sandbox.rs  redaction.rs  remote_secrets.rs  revocation.rs  sandbox.rs  secret_broker.rs  workload_identity.rs
crates/agentd-specify/: Cargo.toml
crates/agentd-specify/src/: client.rs  error.rs  events.rs  lib.rs  test_support.rs  types.rs
crates/agentd-specify/tests/: client.rs  events.rs
crates/agentd-store/: Cargo.toml
crates/agentd-store/migrations/: 0001_init.sql  0002_review_runs_round.sql  0002_runs_worktree_path.sql  0003_agent_registry_lifecycle.sql  0004_agent_runtime_lifecycle.sql  0005_direct_messages.sql  0006_group_messages.sql  0007_message_attachments.sql  0008_agent_chat_task_import.sql  0009_direct_message_schema_and_live_task_graph.sql  0010_agent_scheduler.sql  0011_remote_relay_backend.sql  0012_matrix_bridge_contract.sql  0013_enterprise_agent_worker_runtime.sql  0014_enterprise_artifact_audit.sql  0015_enterprise_task_leases.sql  0016_execution_security.sql  0016_project_authority_snapshots.sql  0017_enterprise_principals.sql  0017_execution_security.sql  0018_enterprise_fleet_scheduler.sql  0018_task_execution_specs.sql  0019_cutover_state.sql  0019_matrix_gateway_cutover.sql  0020_cutover_history.sql  0020_openfab_evidence_skill.sql  0021_matrix_outbox_cursors.sql  0021_native_runtime.sql  0022_final_cutover.sql  0022_matrix_room_project_binding.sql  0023_native_agent_authority.sql  0024_enterprise_scale.sql  0025_enterprise_scale_transitions.sql  0026_enterprise_mutation_fencing.sql  0027_enterprise_audit_history.sql
crates/agentd-store/src/: agent_chat_import.rs  agent_chat_task_graph_repo.rs  agent_chat_task_repo.rs  agent_profile_repo.rs  agent_repo.rs  agent_scheduler_repo.rs  artifact_repo.rs  capability_repo.rs  error.rs  (+42 more)
crates/agentd-surface/: Cargo.toml
crates/agentd-tmux/: Cargo.toml
crates/agentd-worktree/: Cargo.toml
(+605 files in other folders)
