[package]
name = "agentctl"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# Application CLI, not a crates.io library: keeps its version-less path dep on
# agentd-core out of cargo-deny's wildcard ban (allow-wildcard-paths applies to
# private crates only).
publish = false

[lints]
workspace = true

[[bin]]
name = "agentctl"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
agentd-core = { path = "../agentd-core" }

[dev-dependencies]
tempfile = { workspace = true }
