[package]
name = "agentd-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# crate-specific deps come in later phases

[dev-dependencies]
tempfile = { workspace = true }
