[package]
name = "agentd-matrix"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
matrix-sdk-adapter = ["dep:matrix-sdk", "dep:tokio"]

[dependencies]
matrix-sdk = { workspace = true, optional = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
