[package]
name = "agentd-mempal"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# mempal MCP client, not a crates.io library — keeps its version-less path dep
# on agentd-core out of cargo-deny's wildcard ban.
publish = false

[lints]
workspace = true

# `test-support` gates the in-crate `RecordingToolCaller` fake (src/test_support),
# mirroring agentd-core. Not a default feature, so it never ships in a release.
[features]
test-support = []

[dependencies]
agentd-core = { path = "../agentd-core" }
agentd-store = { path = "../agentd-store" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
# Self path dep enabling the in-crate test-support so tests inject the
# RecordingToolCaller (the MCP transport fake) without a real rmcp/mempal server.
agentd-mempal = { path = ".", features = ["test-support"] }
# agentd-core test-support gives drainer tests the in-memory MempalStub.
agentd-core = { path = "../agentd-core", features = ["test-support"] }
tempfile = { workspace = true }
tokio-test = "0.4"
