[package]
name = "agentd-runtime"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
agentd-core = { path = "../agentd-core" }
async-trait = "0.1"
hex = { workspace = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
