[package]
name = "agentd-security"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
agentd-core = { path = "../agentd-core" }
agentd-store = { path = "../agentd-store" }
async-trait = "0.1"
hex = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
url = { workspace = true }
x509-parser = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
