[package]
name = "agentd-store"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# Application storage layer, not a crates.io library — keeps its version-less
# path dep on agentd-core out of cargo-deny's wildcard ban.
publish = false

[lints]
workspace = true

[dependencies]
agentd-core = { path = "../agentd-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
directories = "5"
ulid = "1"
sha2 = "0.10"

[dev-dependencies]
# Self dev-dependency enabling agentd-core's test-support so store tests can
# cross-check behavioral parity against the in-memory fake.
agentd-core = { path = "../agentd-core", features = ["test-support"] }
tempfile = { workspace = true }
tokio-test = "0.4"
pretty_assertions = "1"
